export const snapshot = {};

snapshot[`jsx - simple case 1`] = `
[
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
]
`;

snapshot[`jsx - props 1`] = `
[
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "PROPERTY",
    "style",
  ],
  [
    "OBJECT",
    {
      color: "red",
    },
  ],
  [
    "PROPERTY",
    "id",
  ],
  [
    "STRING",
    "my-cool-div",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
]
`;

snapshot[`jsx - children 1`] = `
[
  [
    "ELEMENT_OPEN",
    "ul",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ARRAY",
    [
      [
        "GENERATOR",
        Object [Generator] {},
      ],
      [
        "GENERATOR",
        Object [Generator] {},
      ],
      [
        "GENERATOR",
        Object [Generator] {},
      ],
    ],
  ],
  [
    "ELEMENT_CLOSE",
    "ul",
  ],
]
`;

snapshot[`jsx - mapped children 1`] = `
[
  [
    "ELEMENT_OPEN",
    "ul",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ARRAY",
    [
      [
        "GENERATOR",
        Object [Generator] {},
      ],
      [
        "GENERATOR",
        Object [Generator] {},
      ],
      [
        "GENERATOR",
        Object [Generator] {},
      ],
    ],
  ],
  [
    "ELEMENT_CLOSE",
    "ul",
  ],
]
`;

snapshot[`"jsx - children + props 1`] = `
[
  [
    "ELEMENT_OPEN",
    "ul",
  ],
  [
    "PROPERTY",
    "id",
  ],
  [
    "STRING",
    "main",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ARRAY",
    [
      [
        "GENERATOR",
        Object [Generator] {},
      ],
      [
        "GENERATOR",
        Object [Generator] {},
      ],
      [
        "GENERATOR",
        Object [Generator] {},
      ],
    ],
  ],
  [
    "ELEMENT_CLOSE",
    "ul",
  ],
]
`;

snapshot[`jsx - nested children 1`] = `
[
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "STRING",
    "Hello, World!",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
]
`;

snapshot[`jsx - nested children + props 1`] = `
[
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "PROPERTY",
    "id",
  ],
  [
    "STRING",
    "1",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "PROPERTY",
    "id",
  ],
  [
    "STRING",
    "2",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "PROPERTY",
    "id",
  ],
  [
    "STRING",
    "3",
  ],
  [
    "PROPERTY",
    "onClick",
  ],
  [
    "FUNCTION",
    [Function: onClick],
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "PROPERTY",
    "id",
  ],
  [
    "STRING",
    "4",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ELEMENT_OPEN",
    "div",
  ],
  [
    "PROPERTY",
    "id",
  ],
  [
    "STRING",
    "5",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "STRING",
    "Hello, World!",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
  [
    "ELEMENT_CLOSE",
    "div",
  ],
]
`;

snapshot[`jsx - fragment 1`] = `
[
  [
    "ELEMENT_OPEN",
    "[FRAGMENT]",
  ],
  [
    "PROPERTY",
    "children",
  ],
  [
    "ARRAY",
    [
      [
        "GENERATOR",
        Object [Generator] {},
      ],
      [
        "GENERATOR",
        Object [Generator] {},
      ],
    ],
  ],
  [
    "ELEMENT_CLOSE",
    "[FRAGMENT]",
  ],
]
`;
